@startuml

title __BIENS's Class Diagram__\n

    namespace iens {
      abstract class biens.ABien {
          {static} - conditions : List<ICondition>
          - dateD : Calendar
          - dateF : Calendar
          - description : String
          - montant : double
          - montantD : double
          - surencheresEnregistrees : HashMap<IUtilisateur, Double>
          + ABien()
          + consulterFraisGestion()
          + encherir()
          + getBien()
          {static} + getConditions()
          + getDateD()
          + getDateF()
          + getMontant()
          + getMontantD()
          + getSurencheresEnregistrees()
          {static} + setConditions()
          + setFraisGestion()
          + setMontant()
          + setSurencheresEnregistrees()
          + toString()
      }
    }


    namespace iens {
      class biens.Habitation {
          - nbPiece : int
          - ville : String
          + Habitation()
      }
    }


    namespace iens {
      class biens.Vehicule {
          - anneeFabrication : int
          - marque : String
          + Vehicule()
      }
    }


  biens.ABien .up.|> encheres.interfaces.IBien
  biens.ABien o-- encheres.interfaces.IFraisGestion : fraisGestion
  biens.Habitation -up-|> biens.ABien
  biens.Vehicule -up-|> biens.ABien


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
